# Traj3D

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  imgui_log.txt
.github/workflows/: android.yml  ci_multiplatform_build.yml  ios.yml
assets/shaders/: default.frag  default.vert  fb_screen_shader.frag  fb_screen_shader.vert  fb_shader.frag  fb_shader.vert  flat_shader.frag  flat_shader.vert  shader.frag  shader.vert
include/: Application.h  ApplicationSettings.h  Components.h  Geometry.h  ParameterUI.h  ParameterUIState.h  RenderEngine.h  Systems.h
include/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  Utils.h
include/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  RenderComamand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
include/Scene/: Entity.h  Scene.cpp  Scene.h
include/UILayer/: Scene.cpp  Scene.h  UILayer.cpp  UILayer.h
include/components/: CameraComponent.h  MeshComponent.h  ShaderComponent.h  TransformComponent.h
include/systems/: MeshSystem.h
scripts/: app.py  main.py  old_main.py  params.py  ui_params.py  utils.py  waves_main.cpp
scripts/examples/legacy/: __main.cpp  _main.cpp
scripts/examples/legacy2/include/: RenderEngine.h  ShaderProgram.h
scripts/examples/legacy2/src/: ParameterUI.cpp  RenderEngine.cpp
scripts/examples/mesh_loading/: example.cpp  model_load.h  shader_load.h
src/: Application.cpp  ParameterUI.cpp  RenderEngine.cpp  app.py  components.py  dock.py  main.cpp  main.py  main_old.py  old_dock.py  params.py  sim.py  systems.py  ui_param.py  ui_params.py  ui_viewport.py  viewport.py
